--- a/package.json
+++ b/package.json
@@ -6,26 +6,31 @@
   "peerDependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "prop-types": "15.7.2"
   },
   "scripts": {
     "build:watch": "webpack --watch",
     "build": "webpack ",
-    "start:dev-do-not-use": "webpack-dev-server --config dev/webpack.config.js",
     "build:dev": "webpack --watch --config dev/webpack.config.js",
     "clean": "rm -rf node_modules && rm -f package-lock.json && rm -rf build && npm i && npm run build ",
     "buildPackage": "npm run clean -- -p && npm pack",
     "test": "NODE_ENV=test jest",
     "test:update": "npm run test -- -u",
-    "eslint": "esw ",
-    "eslintDev": "esw --watch"
+    "eslint": "esw --ext .js,.jsx ",
+    "eslint:watch": "esw --ext .js,.jsx --watch ",
+    "npmAudit": "npm audit --registry=https://registry.npmjs.org ",
+    "npmAuditJson": "npm run npmAudit -- --audit-level high && npm run npmAudit -- --json --audit-level high > npmAuditReport.json",
+    "prettier:check": "prettier  --ignore-path ./.eslintignore --check '**/*.+(js|jsx|html|css|scss|json|json5)'",
+    "prettier:watch": "onchange '**/*.+(js|jsx|html|css|scss|json|json5)' -- prettier --write {{changed}}",
+    "prettier:write": "prettier  --ignore-path ./.eslintignore --write '**/*.+(js|jsx|html|css|scss|json|json5)'"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/runtime": "7.5.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "7.5.5",
     "babel-loader": "^8.0.6",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
@@ -40,17 +45,22 @@
     "enzyme-to-json": "3.4.3",
     "styled-components": "^4.4.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-semistandard": "^15.0.0",
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-jsx": "^8.1.0",
     "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-watch": "^6.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "prettier": "1.19.1"
   },
   "jest": {
     "collectCoverage": true,
