--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,22 @@
 {
-  "extends": ["semistandard", "standard-react"],
+  "extends": ["airbnb", "airbnb/hooks", "prettier"],
   "globals": {
     "styles": true
   },
   "env": {
-    "node": true,
-    "mocha": true,
-    "jest": true
+    "browser": true,
+    "commonjs": true,
+    "jest": true,
+    "es6": true,
+    "jquery": true
   },
   "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2016
+  "plugins": ["prettier", "eslint-plugin-react"],
+  "rules": {
+    "prettier/prettier": "error",
+    "no-var": "error",
+    "curly": "error",
+    "one-var": "error",
+    "no-console": "error"
   }
 }
