Add coverage and npm audit to workflow

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Code quality
         run: |
           npm run eslint
-          # npm run npmAuditJson
-          # node utils/testCoverage.js
+          npm run npmAuditJson
+          node utils/testCoverage.js
