Remove utils from coverage

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
       "!**/coverage/**",
       "!**/webpack.config.js",
       "!**/build/**",
-      "!**/dev/**"
+      "!**/dev/**",
+      "!**/utils/**"
     ]
   },
   "dependencies": {}
