--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "umn-web-template-components-react",
+  "name": "umn-web-template-react",
   "version": "0.1.0",
   "description": "",
   "main": "build/bundle.js",
