--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,20 @@ jobs:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dobe0002' # Defaults to the user or organization that owns the workflow file
-      - run: npm install
-      - run: npm publish
+      -name
+      - name: Install and build
+        run: |
+          npm install
+          npm run build
+      - name: Tests
+        run: npm run test
+      - name: Test coverage
+        run: node utils/testCoverage.js
+      - name: Linting
+        run: npm run eslint
+      - name: Security audit
+        run: npm run npmAuditJson
+      - name: Publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
