--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,12 +28,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dobe0002' # Defaults to the user or organization that owns the workflow file
+      - name: Install and build
+        run: |
+          npm install
+          npm run build
       - name: Publish
         run: npm publish
         env:
