--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dobe0002/umn-web-template-react",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "build/bundle.js",
   "repository": "https://github.com/dobe0002/umn-web-template-react",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build:watch": "webpack --watch",
-    "build": "webpack ",
+    "build": "webpack --mode production",
     "build:dev": "webpack --watch --config dev/webpack.config.js",
     "clean": "rm -rf node_modules && rm -f package-lock.json && rm -rf build && npm i && npm run build ",
     "buildPackage": "npm run clean -- -p && npm pack",
@@ -52,9 +52,6 @@
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-jsx": "^8.1.0",
-    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^10.0.0",
@@ -62,7 +59,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-standard": "^4.0.1",
     "eslint-watch": "^6.0.1",
     "prettier": "1.19.1"
   },
