--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,7 @@
-/build/*
-/coverage/*
-/node_modules/*
-/dev/build/*
-
+/build/**
+/compiled/**
+/coverage/**
+/node_modules/**
+package-lock.json
+src/serviceWorker.js
+src/setupTests.js
