--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "peerDependencies": {
     "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "styled-components": "^5.1.1",
-    "prop-types": "15.7.2"
+    "react-dom": "^16.10.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
