--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.4.1",
+    "stylelint": "^13.6.0",
+    "stylelint-config-prettier": "^8.0.1",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
