--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dobe0002/umn-web-template-react",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "compiled/bundle.js",
   "repository": "https://github.com/dobe0002/umn-web-template-react",
   "publishConfig": {
@@ -27,10 +27,8 @@
     "prettier": "2.0.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "prop-types": "15.7.2",
     "react-scripts": "3.4.1",
-    "sass": "^1.3.0",
-    "stylelint": "^13.5.0",
+    "stylelint": "^13.6.0",
     "stylelint-config-prettier": "^8.0.1",
     "webpack-cli": "^3.3.11"
   },
@@ -111,7 +109,8 @@
     ],
     "coverageReporters": [
       "html",
-      "json-summary"
+      "json-summary",
+      "text-summary"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
